# ai_autogeneration

./: .env.example  .gitignore  README.md  api.py  justfile  main.py  prompt-0.md  prompt-1.md  prompt-2.md  pyproject.toml  requirements.txt
reports/: .gitignore
samples/: design_dialog_example.txt  dialog_example.txt
templates/: design_report_template.html  product_card_template.html  report_template.html
utils/: ai_processor.py  errors.py  image_generator.py  logging_config.py  pdf_generator.py
